tests/ui/mismatched_types/diagnostic-method-lookup-returns-sig-with-fewer-args.stderr
error[E0308]: mismatched types
  --> $DIR/diagnostic-method-lookup-returns-sig-with-fewer-args.rs:4:16
   |
LL |     target.get(10.0); // (used to crash here)
   |            --- ^^^^ expected `i32`, found floating-point number
   |            |
   |            arguments to this method are incorrect
   |
note: method defined here
  --> $DIR/diagnostic-method-lookup-returns-sig-with-fewer-args.rs:22:12
   |
LL |     pub fn get(&self, data: i32) {
   |            ^^^        ---------
note: the `get` call is resolved to the method in `Target`, shadowing the method of the same name on trait `RandomTrait`
  --> $DIR/diagnostic-method-lookup-returns-sig-with-fewer-args.rs:4:12
   |
LL |     target.get(10.0); // (used to crash here)
   |            ^^^ refers to `Target::get`
   = note: additionally, there are 1 other available methods that aren't in scope
help: you might have meant to call one of the other methods; you can use the fully-qualified path to call one of them explicitly
   |
LL -     target.get(10.0); // (used to crash here)
LL +     <_ as std::slice::SliceIndex<_>>::get(target, 10.0); // (used to crash here)
   |
LL -     target.get(10.0); // (used to crash here)
LL +     <_ as object::read::elf::relocation::Relr>::get(&target, 10.0); // (used to crash here)
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
